// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Асинхронное изменение реактивного свойства во время асинхронного построения асинхронный родитель, в нём асинхронный процесс завершается позже _beforeMount родителя, и позже асинхронного ребенка: 1. Ждём Promise ControlParent 1`] = `
<div>
  <div
    name="$$wasaby$async$loading"
  />
</div>
`;

exports[`Асинхронное изменение реактивного свойства во время асинхронного построения асинхронный родитель, в нём асинхронный процесс завершается позже _beforeMount родителя, и позже асинхронного ребенка: 2. Всё пустое, т.к. выполнился _beforeMount ControlParent, но у него еще старое состояние 1`] = `
<div>
  <div
    tabindex="0"
  >
    <div
      tabindex="0"
    />
    <div
      name="$$wasaby$async$loading"
    />
  </div>
</div>
`;

exports[`Асинхронное изменение реактивного свойства во время асинхронного построения асинхронный родитель, в нём асинхронный процесс завершается позже _beforeMount родителя, и позже асинхронного ребенка: 3. ControlChildAsync построился, но в ControlParent еще старое состояние 1`] = `
<div>
  <div
    tabindex="0"
  >
    <div
      tabindex="0"
    />
    <div
      tabindex="0"
    />
  </div>
</div>
`;

exports[`Асинхронное изменение реактивного свойства во время асинхронного построения асинхронный родитель, в нём асинхронный процесс завершается позже _beforeMount родителя, и позже асинхронного ребенка: 4. Несмотря на то что у ControlParent состояние изменилось, всё пустое, т.к. не проброшено до детей 1`] = `
<div>
  <div
    tabindex="0"
  >
    <div
      tabindex="0"
    />
    <div
      tabindex="0"
    />
  </div>
</div>
`;

exports[`Асинхронное изменение реактивного свойства во время асинхронного построения асинхронный родитель, в нём асинхронный процесс завершается позже _beforeMount родителя, и позже асинхронного ребенка: 5. Всё отрисовалось, т.к. произошло обновление 1`] = `
<div>
  <div
    tabindex="0"
  >
    <div
      tabindex="0"
    >
      value
    </div>
    <div
      tabindex="0"
    >
      value
    </div>
  </div>
</div>
`;

exports[`Асинхронное изменение реактивного свойства во время асинхронного построения асинхронный родитель, в нём асинхронный процесс завершается позже _beforeMount, но раньше асинхронного ребенка: 1. Ждём Promise ControlParent 1`] = `
<div>
  <div
    name="$$wasaby$async$loading"
  />
</div>
`;

exports[`Асинхронное изменение реактивного свойства во время асинхронного построения асинхронный родитель, в нём асинхронный процесс завершается позже _beforeMount, но раньше асинхронного ребенка: 2. Всё пустое, т.к. выполнился _beforeMount ControlParent, но он еще не обновил состояние 1`] = `
<div>
  <div
    tabindex="0"
  >
    <div
      tabindex="0"
    />
    <div
      name="$$wasaby$async$loading"
    />
  </div>
</div>
`;

exports[`Асинхронное изменение реактивного свойства во время асинхронного построения асинхронный родитель, в нём асинхронный процесс завершается позже _beforeMount, но раньше асинхронного ребенка: 3. Несмотря на то что у ControlParent состояние изменилось, всё пустое, т.к. ждем асинхронного ControlChildAsync 1`] = `
<div>
  <div
    tabindex="0"
  >
    <div
      tabindex="0"
    />
    <div
      name="$$wasaby$async$loading"
    />
  </div>
</div>
`;

exports[`Асинхронное изменение реактивного свойства во время асинхронного построения асинхронный родитель, в нём асинхронный процесс завершается позже _beforeMount, но раньше асинхронного ребенка: 4. ControlChildAsync построился, но новое состояние ControlParent не проброшено до детей 1`] = `
<div>
  <div
    tabindex="0"
  >
    <div
      tabindex="0"
    />
    <div
      tabindex="0"
    />
  </div>
</div>
`;

exports[`Асинхронное изменение реактивного свойства во время асинхронного построения асинхронный родитель, в нём асинхронный процесс завершается позже _beforeMount, но раньше асинхронного ребенка: 5. Всё отрисовалось, т.к. произошло обновление 1`] = `
<div>
  <div
    tabindex="0"
  >
    <div
      tabindex="0"
    >
      value
    </div>
    <div
      tabindex="0"
    >
      value
    </div>
  </div>
</div>
`;

exports[`Асинхронное изменение реактивного свойства во время асинхронного построения асинхронный родитель, в нём асинхронный процесс завершается раньше _beforeMount, и раньше асинхронного ребенка: 1. Ждём Promise ControlParent 1`] = `
<div>
  <div
    name="$$wasaby$async$loading"
  />
</div>
`;

exports[`Асинхронное изменение реактивного свойства во время асинхронного построения асинхронный родитель, в нём асинхронный процесс завершается раньше _beforeMount, и раньше асинхронного ребенка: 2. Выполнился _beforeMount ControlParent, ControlChildSync построился с новым состоянием 1`] = `
<div>
  <div
    tabindex="0"
  >
    <div
      tabindex="0"
    >
      value
    </div>
    <div
      name="$$wasaby$async$loading"
    />
  </div>
</div>
`;

exports[`Асинхронное изменение реактивного свойства во время асинхронного построения асинхронный родитель, в нём асинхронный процесс завершается раньше _beforeMount, и раньше асинхронного ребенка: 3. ControlChildAsync построился с актуальным состоянием. Всё отрисовалось 1`] = `
<div>
  <div
    tabindex="0"
  >
    <div
      tabindex="0"
    >
      value
    </div>
    <div
      tabindex="0"
    >
      value
    </div>
  </div>
</div>
`;

exports[`Асинхронное изменение реактивного свойства во время асинхронного построения синхронный родитель, в нём асинхронный процесс завершается позже асинхронного ребенка: 1. Всё пустое, т.к. у ControlParent еще старое состояние 1`] = `
<div>
  <div
    tabindex="0"
  >
    <div
      tabindex="0"
    />
    <div
      name="$$wasaby$async$loading"
    />
  </div>
</div>
`;

exports[`Асинхронное изменение реактивного свойства во время асинхронного построения синхронный родитель, в нём асинхронный процесс завершается позже асинхронного ребенка: 2. ControlChildAsync построился, но в ControlParentAsync еще старое состояние 1`] = `
<div>
  <div
    tabindex="0"
  >
    <div
      tabindex="0"
    />
    <div
      tabindex="0"
    />
  </div>
</div>
`;

exports[`Асинхронное изменение реактивного свойства во время асинхронного построения синхронный родитель, в нём асинхронный процесс завершается позже асинхронного ребенка: 3. Несмотря на то что у ControlParentAsync состояние изменилось, всё пустое, т.к. не проброшено до детей 1`] = `
<div>
  <div
    tabindex="0"
  >
    <div
      tabindex="0"
    />
    <div
      tabindex="0"
    />
  </div>
</div>
`;

exports[`Асинхронное изменение реактивного свойства во время асинхронного построения синхронный родитель, в нём асинхронный процесс завершается позже асинхронного ребенка: 4. Всё отрисовалось, т.к. произошло обновление 1`] = `
<div>
  <div
    tabindex="0"
  >
    <div
      tabindex="0"
    >
      value
    </div>
    <div
      tabindex="0"
    >
      value
    </div>
  </div>
</div>
`;

exports[`Асинхронное изменение реактивного свойства во время асинхронного построения синхронный родитель, в нём асинхронный процесс завершается раньше асинхронного ребенка: 1. Всё пустое, т.к. у ControlParent еще старое состояние 1`] = `
<div>
  <div
    tabindex="0"
  >
    <div
      tabindex="0"
    />
    <div
      name="$$wasaby$async$loading"
    />
  </div>
</div>
`;

exports[`Асинхронное изменение реактивного свойства во время асинхронного построения синхронный родитель, в нём асинхронный процесс завершается раньше асинхронного ребенка: 2. Несмотря на то что у ControlParent состояние изменилось, всё пустое, т.к. не проброшено до детей 1`] = `
<div>
  <div
    tabindex="0"
  >
    <div
      tabindex="0"
    />
    <div
      name="$$wasaby$async$loading"
    />
  </div>
</div>
`;

exports[`Асинхронное изменение реактивного свойства во время асинхронного построения синхронный родитель, в нём асинхронный процесс завершается раньше асинхронного ребенка: 3. ControlChildAsync построился и всё отрисовалось, т.к. произошло обновление 1`] = `
<div>
  <div
    tabindex="0"
  >
    <div
      tabindex="0"
    >
      value
    </div>
    <div
      tabindex="0"
    >
      value
    </div>
  </div>
</div>
`;
